@@ -6,7 +6,9 @@ version 1.2.1
 - Make the NIST linear regression test suite available as a
   plugin
 - Add ARMA model to the variable menu (plus "arma" command)
-- Fix bug with displaying a TSLS model in the GUI program
+- Fix bugs with displaying a TSLS model in the GUI program
+- Fix bug in display of actual, fitted and residuals in GUI
+  program
 
 12/14/2003 version 1.2.0
 - add "rename" command (rename a variable)
